responsive on mobile

--- a/styles.css
+++ b/styles.css
@@ -356,6 +356,9 @@ th, td {
         max-width: 200px;
         border-radius: 50%;
     }
+    .home-content{
+        margin:10px;
+    }
     .home-content h1 {
         font-size: 30px;
         line-height: 1.2;
@@ -371,11 +374,14 @@ th, td {
         width: 630px;
     }
     .main-content{
-        margin: 10px 0 10px 10px;
+        margin: 70px 0 20px 50px;
     }
     .sidebar {
+        padding: 20px;
         background-color: #f0f0f0;
-        width: 40%;
+    }
+    .sidebar p, li{
+        font-size: 15px;
     }
     .wrap2 {
         margin-left: 10px;
